# Ishiiruka

./: .gitignore  CMakeLists.txt  build-linux.sh
Source/Core/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Source/Core/Core/HW/: EXI_DeviceSlippi.cpp  EXI_DeviceSlippi.h
Source/Core/Core/Slippi/: CMakeLists.txt  SlippiSpectate.cpp  SlippiSpectate.h  slippicomm.proto
Source/Core/DolphinWX/: Main.cpp
